test-suite/tests/roundtrip/invalid/syntax/malformed_line/06/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/06/input.essence:2:14:
  |
2 | find s : set {x,y}
  |              ^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/malformed_line/06/input.essence:2:14:
  |
2 | find s : set {x,y}
  |              ^
Missing Domain

tests/roundtrip/invalid/syntax/malformed_line/06/input.essence:2:14:
  |
2 | find s : set {x,y}
  |              ^
Missing of

tests/roundtrip/invalid/syntax/malformed_line/06/input.essence:3:11:
  |
3 | such that x<y
  |           ^
Tried to use a Domain where Value was expected

tests/roundtrip/invalid/syntax/malformed_line/06/input.essence:3:13:
  |
3 | such that x<y
  |             ^
Tried to use a Domain where Value was expected

